--- a/WebFundamentals/CSS/Plotting/blocks.html
+++ b/WebFundamentals/CSS/Plotting/blocks.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
+   	  <meta charset = "utf-8">
       <title>Position Practice</title>
+      <meta name="description" content="A really blocky site!">
       <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
