Finished Portfolio Assignment

--- a/WebFundamentals/CSS/Portfolio/portfolio.html
+++ b/WebFundamentals/CSS/Portfolio/portfolio.html
@@ -7,11 +7,116 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-		<div id = "Header1">
+		<div id = "mainheader">
 			<h1>Jayne Doe</h1>
-		</div>
-		<div id = "Header2">
 			<h2>Master of Shadows and the Internet!</h2>
+		</div>
+		<div id = "wrapper">
+			<div id = "mainphoto">
+				<img src = "photo_of_me.jpg" alt = "Me" height = "250" width = "400">
+			</div>
+			<div id = "about">
+				<h2>About...</h2>
+				<p>Hello!  I'm an extremely driven and creative Full Stack Developer who 
+				is currently open for career opportunities as a front-end or back-end 
+				developer in the Greater Seattle Area.</p>
+				<p>I'm a recent graduate of Coding Dojo, coding school located in 
+				Bellevue, WA that teaches 3 full stacks in 3 months.  I'm capable of 
+				learning new technologies very quickly, and am always looking for 
+				opportunities to further expend my skills and grow as a developer.</p>
+				<p><span class = "underline">Continue reading...</span></p>
+			</div>
+			<div id = content>
+				<div class = "main">
+					<h2>La Mode</h2>
+					<img src = "lamode.png" alt = "La Mode" height = "140" width = "28">
+					<p>La Mode is an Ecommerce website designed to market various 
+					clothing products.  Users are able to view the available garments, 
+					select their desired quantity, and compile a shopping cars for making 
+					a final purchase.</p>
+					<div class = "technologies">
+						<h3>Technologies:</h3>
+						<img src = "php.png" alt = "php" height = 40 width = 40>
+						<img src = "codeigniter.png" alt = "codeigniter" height = 40 width = 40>
+						<img src = "jquery.png" alt = "jquery" height = 40 width = 40>
+						<img src = "ajax.png" alt = "ajax" height = 40 width = 40>
+						<img src = "mysql.png" alt = "mysql" height = 40 width = 40>
+						<img src = "html.png" alt = "html" height = 40 width = 40>
+						<img src = "css.png" alt = "css" height = 40 width = 40>
+						<img src = "bootstrap.png" alt = "bootstrap" height = 40 width = 40>
+					</div>
+					<div class = button>
+						<p>La Mode</p>
+					</div>
+				</div>
+				<div class = "main">
+					<h2>Family Contacts</h2>
+						<img src = "familycontacts.png" alt = "Family Contacts" height = "140" width = "280">
+						<p>Family Contacts is a free application for managing, sharing, and 
+						visualizing your family relationships for both extended and immediate 
+						family.  As an essential feature of the project, your log-in 
+						information determines who you can see and reveals how people are 
+						related to you.</p>
+					<div class = "technologies">
+						<h3>Technologies:</h3>
+						<img src = "javascript.png" alt = "javascript" height = 40 width = 40>
+						<img src = "mongodb.png" alt = "mongodb" height = 40 width = 40>
+						<img src = "expressjs.png" alt = "expressjs" height = 40 width = 40>
+						<img src = "angular.png" alt = "angular" height = 40 width = 40>
+						<img src = "nodejs.png" alt = "nodejs" height = 40 width = 40>
+						<img src = "html.png" alt = "html" height = 40 width = 40>
+						<img src = "css.png" alt = "css" height = 40 width = 40>
+						<img src = "socket.png" alt = "socket" height = 40 width = 40>
+					</div>
+					<div class = button>
+						<p>Family Contacts</p>
+					</div>
+				</div>
+				<div class = "main">
+					<h2>fiveEleven</h2>
+					<img src = "fiveEleven.png" alt = "fiveEleven" height = 140 width = 280>
+					<p>Five Eleven is a data visualization project built on the Python 
+					software stack.  The application transforms the developer job-hunt 
+					into a more visual, user friendly experience.  Based on location, 
+					technology popularity, and other vast data sets, users may easily 
+					visualize the varying sizes and concentrations of the junior 
+					developer job market across the nation.</p>
+					<div class = "technologies">
+						<h3>Technologies:</h3>
+						<img src = "python.png" alt = "python" height = 40 width = 40>
+						<img src = "django.png" alt = "django" height = 40 width = 40>
+						<img src = "d3.png" alt = "d3" height = 40 width = 40>
+						<img src = "angular.png" alt = "angular" height = 40 width = 40>
+						<img src = "sqlite.png" alt = "sqlite" height = 40 width = 40>
+						<img src = "html.png" alt = "html" height = 40 width = 40>
+						<img src = "css.png" alt = "css" height = 40 width = 40>
+						<img src = "javascript.png" alt = "javascript" height = 40 width = 40>
+						<img src = "materialize.png" alt = "materialize" height = 40 width = 40>
+					</div>
+					<div class = button>
+						<p>fiveEleven</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<p><span id = "center">jdoe@gmails.com | 206-555-1212</span></p>
+		<div id = "links">
+			<img src = "github.png" alt = "github" height = 20 width = 20>
+			<div class = underline>
+				<p>jaynedev</p>
+			</div>
+			<img src = "linkedin.png" alt = "linkedin" height = 20 width = 20>
+			<div class = underline>
+				<p>jayne-doe</p>
+			</div>
+			<img src = "twitter.png" alt = "twitter" height = 20 width = 20>
+			<div class = underline>
+				<p>jdtweets</p>
+			</div>
+			<img src = "codepen.png" alt = "codepen" height = 20 width = 20>
+			<div class = underline>
+				<p>jaynedev</p>
+			</div>
 		</div>
 	</body>
 </html>
